force-app/main/default/objects/Dictionary_API__c/Dictionary_API__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The API keys of various dictionaries.</description>
    <label>Dictionary API</label>
</CustomObject>