force-app/main/default/objects/Dictionary_API__c/fields/Dictionary_Name__c.field-meta.xml
<CustomField>
    <fullName>Dictionary_Name__c</fullName>
    <description>The name of the provided dictionary.</description>
    <label>Dictionary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>