force-app/main/default/objects/Dictionary_API__c/fields/Key_API__c.field-meta.xml
<CustomField>
    <fullName>Key_API__c</fullName>
    <description>The API key of the provided dictionary.</description>
    <label>Key API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>