force-app/main/default/objects/Dictionary_API__c/fields/Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Request_URL__c</fullName>
    <description>The URL of request to receive the data from the provided API.</description>
    <label>Request URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>